syntax = "proto3";

package calculator;

option go_package = "github.com/nikolasnorth/calculator;calculator";

message IntRequest {
  int64 a = 1;
  int64 b = 2;
}

message IntResponse {
  int64 result = 1;
}

message FloatResponse {
  float result = 1;
}

service Calculator {
  rpc Add(IntRequest) returns (IntResponse);
  rpc Sub(IntRequest) returns (IntResponse);
  rpc Mult(IntRequest) returns (IntResponse);
  rpc Div(IntRequest) returns (FloatResponse);
}